# public/swagger-ui/dist/swagger.json
@@ -23,12 +23,53 @@
       "application/json"
     ],
     "paths": {
+      "/authenticate": {
+        "post": {
+          "description": "Generates a token based on LDAP credentials",
+          "consumes": [
+              "application/x-www-form-urlencoded"
+          ],
+          "produces": [
+              "application/json"
+            ],
+          "parameters": [
+            {
+              "name": "username",
+              "in": "formData",
+              "description": "LDAP Username",
+              "required": true,
+              "type": "string"
+            },
+            {
+              "name": "password",
+              "in": "formData",
+              "description": "LDAP Password",
+              "required": true,
+              "type": "string",
+              "format": "password"
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "Token Object"
+            }
+          }
+        }
+      },
       "/databases": {
         "get": {
           "description": "Returns all databases",
           "produces": [
             "application/json"
           ],
+          "parameters": [
+            {
+            "name": "token",
+            "in": "query",
+            "description": "Token for authentication",
+            "required": true,
+            "type": "string"            
+          }],
           "responses": {
             "200": {
               "description": "A list of databases.",
@@ -50,6 +91,13 @@
                 "application/json"
               ],
             "parameters": [
+              {
+                "name": "token",
+                "in": "formData",
+                "description": "Token for authentication",
+                "required": true,
+                "type": "string"            
+              },
               {
                 "name": "title",
                 "in": "formData",
@@ -94,6 +142,13 @@
             "description": "Returns a database based on a single ID",
             "parameters": [
               {
+                "name": "token",
+                "in": "query",
+                "description": "Token for authentication",
+                "required": true,
+                "type": "string"            
+              },
+              {
                 "name": "id",
                 "in": "path",
                 "description": "ID database to fetch",
@@ -120,6 +175,13 @@
                 "application/json"
                 ],
             "parameters": [
+                {
+                  "name": "token",
+                  "in": "formData",
+                  "description": "Token for authentication",
+                  "required": true,
+                  "type": "string"            
+                },
                 {
                     "name": "id",
                     "in": "path",
@@ -180,6 +242,13 @@
                 ],
             "parameters": [
                 {
+                  "name": "token",
+                  "in": "formData",
+                  "description": "Token for authentication",
+                  "required": true,
+                  "type": "string"            
+                },
+                {
                     "name": "id",
                     "in": "path",
                     "description": "ID database to fetch",
@@ -231,6 +300,13 @@
         "delete": {
             "description": "Deletes a database record based on a single ID",
             "parameters": [
+              {
+                "name": "token",
+                "in": "formData",
+                "description": "Token for authentication",
+                "required": true,
+                "type": "string"            
+              },
               {
                 "name": "id",
                 "in": "path",
